Bug 158333 - FILEOPEN: DOCX: Layout differences with justified paragraph if multiple text portions in a line
Summary: FILEOPEN: DOCX: Layout differences with justified paragraph if multiple text ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.2.0
Keywords:
Depends on:
Blocks: DOCX-compatibilityMode-15 DOCX-Smart-Justify
  Show dependency treegraph
 
Reported: 2023-11-23 11:40 UTC by László Németh
Modified: 2025-04-13 14:13 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
test document (6.67 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2023-11-23 12:20 UTC, László Németh
Details
test file (11.32 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2023-12-06 13:00 UTC, László Németh
Details
composite screenshot of before (black) and after (red) (2.28 MB, image/jpeg)
2023-12-06 13:03 UTC, László Németh
Details
test file (16.56 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2023-12-19 13:11 UTC, László Németh
Details

Note You need to log in before you can comment on or make changes to this bug.
Description László Németh 2023-11-23 11:40:26 UTC
Description:
Multiple text portions, e.g. if some part of a line contains direct character formatting breaks DOCX interoperability of justified paragraphs.

Follow-up to Bug 119908.

Steps to Reproduce:
1. Open the attached test document.

Actual Results:
Second line contains two words ("sed. Cras")

Expected Results:
Second line contains only the last word ("Cras")


Reproducible: Always


User Profile Reset: No

Additional Info:
Removing the multiple text portions by clicking in the text, and Ctrl-A Ctrl-C Ctrl-Shift-V, choosing Unformatted text, the second line contains only the last word, as requested.
Comment 1 Mike Kaganski 2023-11-23 11:56:00 UTC
Likely you forgot to actually attach the text doc mentioned in comment 0.
Comment 2 László Németh 2023-11-23 12:20:42 UTC
Created attachment 190989 [details]
test document
Comment 3 László Németh 2023-11-23 12:21:25 UTC
(In reply to Mike Kaganski from comment #1)
> Likely you forgot to actually attach the text doc mentioned in comment 0.

@Mike: Thanks, indeed!
Comment 4 Commit Notification 2023-11-27 13:48:39 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/53de98b29548ded88e0a44c80256fc5e340d551e

tdf#158333 sw smart justify: fix multiple text portions

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 László Németh 2023-12-06 13:00:56 UTC
Created attachment 191268 [details]
test file
Comment 6 László Németh 2023-12-06 13:03:54 UTC
Created attachment 191269 [details]
composite screenshot of before (black) and after (red)
Comment 7 László Németh 2023-12-19 13:11:11 UTC
Created attachment 191504 [details]
test file
Comment 8 László Németh 2023-12-19 13:12:10 UTC
Comment on attachment 191268 [details]
test file

Note: exported with wrong compatibilityMode (12 instead of 15), so it was not possible to test the fix with it.