sw/source/core/text/guess.cxx
@@ -85,7 +85,7 @@ bool SwTextGuess::Guess( const SwTextPortion& rPor, SwTextFormatInfo &rInf,
                     DocumentSettingId::JUSTIFY_LINES_WITH_SHRINKING))
     {
         // allow up to 2% shrinking of the line
-        nLineWidth /= 0.98;
+        nLineWidth = nLineWidth / 0.98 + rInf.X() / 0.98 - rInf.X();
     }
 
     // tdf#104668 space chars at the end should be cut if the compatibility option is enabled
